# Furor

./: Cargo.toml  Dioxus.toml  LICENSE  README.md  index.html
crates/app/: Cargo.toml
crates/app/src/: http.rs  lib.rs  state.rs  websocket.rs
crates/app/src/components/: attachment.rs  channel.rs  channel_list.rs  channel_messages.rs  direct_message_list.rs  icon.rs  member_list.rs  mod.rs  modal.rs  reply.rs  server_header.rs  server_list.rs  typing.rs  virtual_list.rs
crates/app/src/pages/: app.rs  channel.rs  dm_channel.rs  login.rs  mod.rs  saved_messages.rs
crates/app/src/utils/: channel.rs  context_menu.rs  files.rs  login.rs  message.rs  mod.rs  modal.rs  theme.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/markdown/: Cargo.toml
crates/markdown/src/: lib.rs  parser.rs  syntax.pest
src/: client.rs  http.rs  icons.rs  main.rs  state.rs  utils.rs  websocket.rs
src/components/: attachment.rs  channel.rs  channel_list.rs  channel_messages.rs  context_menu.rs  direct_message_list.rs  hcaptcha.rs  icon.rs  input.rs  lazy.rs  loading.rs  markdown.rs  member_list.rs  message.rs  message_area.rs  message_editor.rs  mod.rs  modal.rs  reply.rs  server_header.rs  server_list.rs  typing.rs
src/components/message/: message.rs  message_area.rs  message_editor.rs  message_reactions.rs  mod.rs
src/components/native/: button.rs  input.rs  mod.rs
src/lib/: client.rs  event_handler.rs  http.rs  mod.rs  state.rs  ws.rs
src/lib/types/: asset.rs  channel.rs  member.rs  message.rs  mod.rs  role.rs  server.rs  user.rs  ws.rs
src/pages/: app.rs  channel.rs  dm_channel.rs  home.rs  login.rs  main_app.rs  mod.rs  saved_messages.rs
src/pages/login/: mod.rs
src/styles/: global.css
src/types/: asset.rs  channel.rs  emoji.rs  http.rs  member.rs  message.rs  mod.rs  permissions.rs  role.rs  server.rs  ulid.rs  user.rs  ws.rs
src/utils/: async.rs  channel.rs  context_menu.rs  files.rs  login.rs  message.rs  mod.rs  modal.rs  theme.rs
(+17 files in other folders)
