[package]
name = "basic-dioxus-channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git="https://github.com/DioxusLabs/dioxus/", features = ["web", "macro", "hooks", "html", "fermi"] }
async-std = { version = "1.0" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
futures = "0.3.19"
ws_stream_wasm = "0.7"
reqwest = { version = "0.11.9", features=["json", "multipart", "default-tls", "blocking"] }
log = "0.4.6"
wasm-logger = "0.2.0"
lru-cache = "*"
