[package]
name = "basic-dioxus-channel"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { git="https://github.com/DioxusLabs/dioxus/", features = ["web", "macro", "hooks", "html", "fermi"] }
async-std = { version = "1.0" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
futures = "0.3.19"
im-rc = "15.0.0"
log = "0.4.6"
wasm-logger = "0.2.0"
lru-cache = "*"
reqwest = { version = "0.11.9", features = ["json", "multipart"] }
ws_stream_wasm = "0.7.3"
ulid = "0.5.0"
chrono = { version = "0.4" }
getrandom = { version = "0.2", features = ["js"] }

